Finished car list section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <script
+      src="https://kit.fontawesome.com/2e2fd72eed.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Luxury Car rent</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -11,10 +14,224 @@
     <div class="sidebar">sidebar</div>
     <header class="header">header</header>
     <div class="top-cars">3 top Cars</div>
-    <section class="features">Features</section>
-    <div class="story__pictures">story pictures</div>
-    <div class="story__content">story content</div>
-    <section class="homes">Homes</section>
+    <section class="features">
+      <div class="feature">
+        <i class="fas fa-car feature__icon"></i>
+        <h4 class="heading-4">Latest car models</h4>
+        <p class="feature__text">
+          Pretty much every company is offering either a brand new or moderately
+          refreshed vehicle for 2020. That means modern car buyers have no
+          shortage of options to choose from when looking for their next car.
+        </p>
+      </div>
+      <div class="feature">
+        <i class="fas fa-money-bill-alt feature__icon"></i>
+        <h4 class="heading-4">Best price guaranteed</h4>
+        <p class="feature__text">
+          Our Best Price Guarantee means that you can be sure of booking at the
+          best rate. If you find a lower price elsewhere within 24 hours of
+          booking, we will match the lower rate.
+        </p>
+      </div>
+      <div class="feature">
+        <i class="fas fa-location-arrow feature__icon"></i>
+        <h4 class="heading-4">GPS included</h4>
+        <p class="feature__text">
+          Car Hire with GPS included in numerous destinations. Driving through a
+          new town can be challenging if you don't have the right help.
+        </p>
+      </div>
+      <div class="feature">
+        <i class="fas fa-plane-arrival feature__icon"></i>
+        <h4 class="heading-4">Airport pickup</h4>
+        <p class="feature__text">
+          Worldwide airport transfer from the airport to your hotel. Book your
+          airport transportation with the professional.
+        </p>
+      </div>
+      <div class="feature">
+        <i class="fas fa-gas-pump feature__icon"></i>
+        <h4 class="heading-4">Full gas tank included</h4>
+        <p class="feature__text">
+          Offers drivers the choice of three gas tank sizes so they can choose
+          the one that works best for their lifestyle. .
+        </p>
+      </div>
+      <div class="feature">
+        <i class="fas fa-gift feature__icon"></i>
+        <h4 class="heading-4">Day 7 for free</h4>
+        <p class="feature__text">
+          Every seventh day is free so you can fully enjoy your adventure. Don't
+          worry about extra charges or other hidden hooks.
+        </p>
+      </div>
+    </section>
+    <div class="story__pictures">
+      <img src="img/image1.jpg" alt="car" class="story__img--1" />
+      <img src="img/image2.jpg" alt="car" class="story__img--2" />
+    </div>
+    <div class="story__content">
+      <h3 class="heading-3">Best moments</h3>
+      <h2 class="heading-2">&quotThe best ride in an most amazing car&quot</h2>
+      <p class="story__text">
+        The best ride of my life was our annual Summer trips to Yosemite
+        National Park. We followed the Highway 120 route through all the lush
+        farms, Orchards, Vineyards and Ranches that were the San Joaquin County.
+      </p>
+      <button class="btn-primary">Book your dream car now</button>
+    </div>
+    <section class="cars">
+      <div class="car">
+        <img src="img/car1.jpg" alt="car1" class="car__img" />
+        <i class="fas fa-star car__star"></i>
+        <h5 class="car__name">BMW classic style</h5>
+        <div class="car__details">
+          <i class="fas fa-tachometer-alt"></i>
+          <p>280 km/h</p>
+        </div>
+
+        <div class="car__details">
+          <i class="fas fa-gas-pump"></i>
+          <p>10.5l / 100km</p>
+        </div>
+
+        <div class="car__details">
+          <i class="fas fa-car-crash"></i>
+          <p>Bail: 1000&euro;</p>
+        </div>
+
+        <div class="car__details">
+          <i class="fas fa-euro-sign"></i>
+          <p>150&euro; a day</p>
+        </div>
+        <button class="btn-primary car__btn">Book Now</button>
+      </div>
+      <div class="car">
+        <img src="img/car2.jpg" alt="car1" class="car__img" />
+        <i class="fas fa-star car__star"></i>
+        <h5 class="car__name">Fast Porsche</h5>
+        <div class="car__details">
+          <i class="fas fa-tachometer-alt"></i>
+          <p>280 km/h</p>
+        </div>
+
+        <div class="car__details">
+          <i class="fas fa-gas-pump"></i>
+          <p>10.5l / 100km</p>
+        </div>
+
+        <div class="car__details">
+          <i class="fas fa-car-crash"></i>
+          <p>Bail: 1000&euro;</p>
+        </div>
+
+        <div class="car__details">
+          <i class="fas fa-euro-sign"></i>
+          <p>150&euro; a day</p>
+        </div>
+        <button class="btn-primary car__btn">Book Now</button>
+      </div>
+      <div class="car">
+        <img src="img/car3.jpg" alt="car1" class="car__img" />
+        <i class="fas fa-star car__star"></i>
+        <h5 class="car__name">Coll Puma</h5>
+        <div class="car__details">
+          <i class="fas fa-tachometer-alt"></i>
+          <p>280 km/h</p>
+        </div>
+
+        <div class="car__details">
+          <i class="fas fa-gas-pump"></i>
+          <p>10.5l / 100km</p>
+        </div>
+
+        <div class="car__details">
+          <i class="fas fa-car-crash"></i>
+          <p>Bail: 1000&euro;</p>
+        </div>
+
+        <div class="car__details">
+          <i class="fas fa-euro-sign"></i>
+          <p>150&euro; a day</p>
+        </div>
+        <button class="btn-primary car__btn">Book Now</button>
+      </div>
+      <div class="car">
+        <img src="img/car4.jpg" alt="car1" class="car__img" />
+        <i class="fas fa-star car__star"></i>
+        <h5 class="car__name">Breathtaking Panama</h5>
+        <div class="car__details">
+          <i class="fas fa-tachometer-alt"></i>
+          <p>280 km/h</p>
+        </div>
+
+        <div class="car__details">
+          <i class="fas fa-gas-pump"></i>
+          <p>10.5l / 100km</p>
+        </div>
+
+        <div class="car__details">
+          <i class="fas fa-car-crash"></i>
+          <p>Bail: 1000&euro;</p>
+        </div>
+
+        <div class="car__details">
+          <i class="fas fa-euro-sign"></i>
+          <p>150&euro; a day</p>
+        </div>
+        <button class="btn-primary car__btn">Book Now</button>
+      </div>
+      <div class="car">
+        <img src="img/car5.jpg" alt="car1" class="car__img" />
+        <i class="fas fa-star car__star"></i>
+        <h5 class="car__name">Laud Monster XC45</h5>
+        <div class="car__details">
+          <i class="fas fa-tachometer-alt"></i>
+          <p>280 km/h</p>
+        </div>
+
+        <div class="car__details">
+          <i class="fas fa-gas-pump"></i>
+          <p>10.5l / 100km</p>
+        </div>
+
+        <div class="car__details">
+          <i class="fas fa-car-crash"></i>
+          <p>Bail: 1000&euro;</p>
+        </div>
+
+        <div class="car__details">
+          <i class="fas fa-euro-sign"></i>
+          <p>150&euro; a day</p>
+        </div>
+        <button class="btn-primary car__btn">Book Now</button>
+      </div>
+      <div class="car">
+        <img src="img/car6.jpg" alt="car1" class="car__img" />
+        <i class="fas fa-star car__star"></i>
+        <h5 class="car__name">Amazing Gallardo</h5>
+        <div class="car__details">
+          <i class="fas fa-tachometer-alt"></i>
+          <p>280 km/h</p>
+        </div>
+
+        <div class="car__details">
+          <i class="fas fa-gas-pump"></i>
+          <p>10.5l / 100km</p>
+        </div>
+
+        <div class="car__details">
+          <i class="fas fa-car-crash"></i>
+          <p>Bail: 1000&euro;</p>
+        </div>
+
+        <div class="car__details">
+          <i class="fas fa-euro-sign"></i>
+          <p>150&euro; a day</p>
+        </div>
+        <button class="btn-primary car__btn">Book Now</button>
+      </div>
+    </section>
     <section class="gallery">gallery</section>
     <footer class="footer">Footer</footer>
   </body>
